--- a/impresion.html
+++ b/impresion.html
@@ -393,7 +393,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -416,7 +417,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </form>
                 -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
