--- a/infraestructura.html
+++ b/infraestructura.html
@@ -492,7 +492,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </form>
                 -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
