--- a/vmware.html
+++ b/vmware.html
@@ -32,7 +32,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/vmware.css" rel="stylesheet" type="text/css" />
-    <link href="css/impresion.css" rel="stylesheet" type="text/css" />
     <link href="css/fontawesome-all.css" rel="stylesheet" />
     <link
       href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800"
@@ -147,10 +146,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-lg-5 py-3">
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info pt-md-3">
-              <div class="advantage_left">
+              <div class="advantage_left pb-3">
                 <!-- <h4 class="mb-2">SAI</h4> -->
-                <h3>Enterprise Solution Provider</h3>
-                <p class="mt-2">
+                <h3>La opción preferida de las empresas</h3>
+                <p class="mt-2 vmware-p">
                   VMware es la plataforma de virtualización líder del mercado
                   para construir infraestructuras de cloud. Permite a los
                   usuarios ejecutar aplicaciones críticas para el negocio con
@@ -160,11 +159,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
             <div class="col-lg-6 advantage-grid-info1">
-              <div class="advantage_left1 text-center">
+              <div class="vmware-img text-center">
                 <img
                   src="./images/vmware-partner.png"
                   class="img-fluid"
-                  alt="vmware enterprise partner"
+                  alt="vmware professional partner"
                 />
               </div>
             </div>
@@ -188,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
               at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
               egestas vestibulum tellus.</p> -->
-              <p class="text-white">
+              <p class="text-white vmware-p">
                 vSphere permite a las organizaciones de TI eliminar los costosos
                 proyectos de expansión del centro de datos que interrumpen las
                 operaciones empresariales, gracias a la posibilidad de
@@ -200,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 para ambientes existentes físicos o virtuales.
               </p>
               <a
-                href="servicios.html"
+                href="#servicios-vmware"
                 class="btn btn-primary vmware-button mt-3"
                 >Servicios</a
               >
@@ -218,9 +217,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
-                <h4 class="mb-2">High Availability</h4>
-                <h3>HA</h3>
-                <p class="mt-2">
+                <h4 class="mb-2">HA - High Availability</h4>
+                <h3>Alta Disponibilidad</h3>
+                <p class="mt-2 vmware-p">
                   HA es la solución automatizada más rentable para el reinicio
                   de todas las aplicaciones en cuestión de minutos en caso de un
                   fallo de hardware o del sistema operativo
@@ -251,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <div class="advantage_left">
                 <h4 class="mb-2">Disaster Recovery</h4>
                 <h3>VMware Site Recovery Manager</h3>
-                <p class="mt-2">
+                <p class="mt-2 vmware-p">
                   VMware Site Recovery Manager es una solución líder en el
                   sector, que proporciona disponibilidad de las aplicaciones y
                   movilidad entre sitios en entornos de cloud privada, se
@@ -264,7 +263,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
 
           <!-- Servicios de VMware -->
-          <div class="row middle-grids pt-lg-5">
+          <div class="row middle-grids pt-lg-5" id="servicios-vmware">
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <!-- <h4 class="mb-2">Servicios</h4> -->
@@ -325,12 +324,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -343,7 +343,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
@@ -353,7 +353,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
