--- a/about.html
+++ b/about.html
@@ -160,14 +160,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h5 class="tittle text-uppercase">
                 Mas de 18 años de experiencia
               </h5>
-              <p class="my-4">
+              <p class="my-4 indent-this-text">
                 Genesys es una empresa con más de 18 años de experiencia en
                 infraestructura y soluciones de informática. Gracias a un amplio
                 conocimiento del mercado, hoy Genesys es uno de los principales
                 Business Partners de IBM a nivel nacional.
               </p>
               <h5 class="tittle text-uppercase">¿Qué hacemos?</h5>
-              <p class="my-4">
+              <p class="my-4 indent-this-text">
                 Brindamos soluciones inteligentes a las necesidades de
                 infraestructura de hardware y software de alto valor para
                 nuestros clientes con un equipo de personas certificadas con
@@ -187,13 +187,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="row">
             <div class="col-lg-6 about-right">
               <h5 class="tittle text-uppercase">Misión</h5>
-              <p class="my-4 about-paragraph">
+              <p class="my-4 about-paragraph indent-this-text">
                 Generar valor para las empresas mediante la integracion de
                 soluciones en tecnologias de informacion que cubran sus
                 necesidades de negocio e incrementen sus ventajas competitivas.
               </p>
               <h5 class="tittle text-uppercase">Visión</h5>
-              <p class="my-4 about-paragraph">
+              <p class="my-4 about-paragraph indent-this-text">
                 Somos una empresa Lider en ofrecer soliciones de tecnologia de
                 informacion basadas en la innovacion y la especializacion,
                 fundamentada en valores, que genera beneficios para nuestros
@@ -214,27 +214,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- //banner-bottom -->
     <!-- choose -->
-    <section class="choose py-5">
+    <section class="choose py-5 px-3">
       <div class="container py-md-4 mt-md-3">
         <div class="row inner_w3l_agile_grids-1 ">
           <div class="col-lg-7 w3layouts_choose_left_grid1">
             <div class="choose_top">
-              <h3 class="w3l_header text-white">Still Have Questions?</h3>
+              <h3 class="w3l_header text-white">
+                ¡Te invitamos a conocer mas de nuestras soluciones!
+              </h3>
+              <!--
+                <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4>
+              -->
               <h4 class="mb-3 mt-3 text-white">
-                Feel Free to Contact Our Agents Directly
+                Contacta a Nuestros Asesores Tecnicos
               </h4>
+              <!--
+                <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
+                egestas vestibulum tellus.</p>
+              -->
               <p class="text-white">
-                Nulla pellentesque mi non laoreet eleifend. Integer porttitor
-                mollisar lorem, at molestie arcu pulvinar ut. Proin ac fermentum
-                est. Cras mi ipsum, consectetur ac ipsum in, egestas vestibulum
-                tellus.
+                Agenda una cita para realizar una demostración y presentación de
+                la funcionalidad y versatilidad de el amplio abanico de
+                soluciones que manejamos.
               </p>
-              <a
-                href="#"
-                class="btn btn-primary mt-3"
-                data-toggle="modal"
-                data-target="#myModal"
-                >Read More</a
+              <a href="#footer" class="scroll btn btn-primary mt-3"
+                >Contáctanos</a
               >
             </div>
           </div>
@@ -338,7 +343,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -361,7 +367,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
