--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //services -->
     <!-- choose -->
     <section class="choose py-5 px-3">
-      <div class="py-md-4 mt-md-3">
+      <div class="container py-md-4 mt-md-3">
         <div class="row inner_w3l_agile_grids-1">
           <div class="col-lg-7 w3layouts_choose_left_grid1">
             <div class="choose_top">
