--- a/about.html
+++ b/about.html
@@ -189,13 +189,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h5 class="tittle text-uppercase">Misión</h5>
               <p class="my-4 about-paragraph indent-this-text">
                 Generar valor para las empresas mediante la integracion de
-                soluciones en tecnologias de informacion que cubran sus
+                soluciones en tecnologias de información que cubran sus
                 necesidades de negocio e incrementen sus ventajas competitivas.
               </p>
               <h5 class="tittle text-uppercase">Visión</h5>
               <p class="my-4 about-paragraph indent-this-text">
                 Somos una empresa Lider en ofrecer soliciones de tecnologia de
-                informacion basadas en la innovacion y la especializacion,
+                información basadas en la innovacion y la especializacion,
                 fundamentada en valores, que genera beneficios para nuestros
                 clientes, socios, y colaboradores, logrando crecimiento
                 continuo.
@@ -226,7 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4>
               -->
               <h4 class="mb-3 mt-3 text-white">
-                Contacta a Nuestros Asesores Tecnicos
+                Contacta a Nuestros Asesores Técnicos
               </h4>
               <!--
                 <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
@@ -338,7 +338,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
@@ -357,7 +357,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
