--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Contacto</title>
+    <title>Genesys Informática | Contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="banner-bottom py-lg-5 py-md-5 py-3">
       <div class="container">
         <div class="inner-sec py-lg-5 py-3">
-          <h3 class="tittle text-center mb-md-5 mb-4">Contactanos</h3>
+          <h3 class="tittle text-center mb-md-5 mb-4">Contáctanos</h3>
           <div class="address row">
             <div class="col-lg-4 address-grid">
               <div class="row address-info">
@@ -152,7 +152,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="far fa-map"></i>
                 </div>
                 <div class="col-md-9 address-right text-left">
-                  <h6>Direccion</h6>
+                  <h6>Dirección</h6>
+                  <p>Dr Angel Martinez Villareal #433</p>
+                  <p>Col. Chepevera</p>
                   <p>Monterrey, NL, Mexico</p>
                 </div>
               </div>
@@ -166,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <h6>Email</h6>
                   <p>
                     Email :
-                    <a href="mailto:example@email.com"> mail@example.com</a>
+                    <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
                   </p>
                 </div>
               </div>
@@ -177,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-mobile-alt"></i>
                 </div>
                 <div class="col-md-9 address-right text-left">
-                  <h6>Telefono</h6>
+                  <h6>Teléfono</h6>
                   <p>+1 81 8347 7640</p>
                 </div>
               </div>
@@ -220,7 +222,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="col-md-6 con-right">
                   <div class="form-group">
-                    <label>Message</label>
+                    <label>Texto</label>
                     <textarea
                       id="textarea"
                       placeholder=""
@@ -250,12 +252,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -268,7 +271,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
@@ -278,7 +281,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
