--- a/impresion.html
+++ b/impresion.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Impresion</title>
+    <title>Genesys Informática | Impresión</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -146,13 +146,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="banner-bottom py-lg-5 py-md-5 py-3">
       <div class="container">
         <div class="inner-sec py-lg-5 py-3">
-          <h3 class="tittle text-center mb-md-5 mb-4">Impresion</h3>
+          <h3 class="tittle text-center mb-md-5 mb-4">Impresión</h3>
 
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info pt-md-3">
               <div class="advantage_left">
                 <!-- <h4 class="mb-2">SAI</h4> -->
-                <h3>Servicios Administrados de Impresion</h3>
+                <h3>Servicios Administrados de Impresión</h3>
                 <p class="mt-2">
                   Servicios administrados de Impresión y manejo de documentos.
                   Con la solución de servicios administrados de impresión puedes
@@ -388,7 +388,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
