--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Comunicaciones</title>
+    <title>Genesys Informática | Comunicaciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -146,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
       <div class="container">
         <div class="inner-sec py-lg-5 py-3">
-          <h3 class="tittle text-center mb-md-5 mb-4">Telecomunicacion</h3>
+          <h3 class="tittle text-center mb-md-5 mb-4">Comunicaciones</h3>
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
@@ -154,14 +154,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h3>Switching y Routing</h3>
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
                   <li>Revision de tu Red Fisica</li>
-                  <li>Diseño e Implementacion</li>
-                  <li>Administracion y Monitoreo</li>
+                  <li>Diseño e Implementación</li>
+                  <li>Administración y Monitoreo</li>
                   <li>Soporte y Mantenimiento</li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-6 advantage-grid-info1">
-              <div class="advantage_left1 text-center">
+              <div class="comunicaciones text-center">
                 <img
                   src="https://lh3.googleusercontent.com/S5vdUqgjF7I-xW23Wm4u3d24enArTzNzff0uTsYIXvbjQwBLM-1a7Ocb6IvsSBRPGM3685StI5F4yyMKnWkXQ9IeKdP1o1otXXv3KhjoTUfW940Zhtgp3Yz44jfERJbMOVE3KqXRXBE=w2400"
                   class="img-fluid"
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info1">
-              <div class="advantage_left1 text-center">
+              <div class="comunicaciones text-center">
                 <img
                   src="https://lh3.googleusercontent.com/ksYLy9sPDmG7YMt1LNUgoBEkyOuDa_J6mesm4k7mzydvfc-cZhnSNlmTbQrRNPH9BUV-8mZeLjrKS8VmojNZUB6sho5HKUWK578UT2dhLnBxlnMS4P9UWTTEQcmu_BE3GWzmwyKJ4LM=w2400"
                   class="img-fluid"
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
-                <h4 class="mb-2">Conexion Privada y Confiable a la Nube</h4>
+                <h4 class="mb-2">Conexión Privada y Confiable a la Nube</h4>
                 <h3>Cloud Connectivity</h3>
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
                   <li>Garantizamos tu Ancho de Banda</li>
@@ -201,12 +201,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
                   <li>Salas de Videoconferencias</li>
                   <li>Soluciones de Audio y Video</li>
-                  <li>Comunicacion Interna a travez de Señalizacion Digital</li>
+                  <li>Comunicación Interna a travez de Señalizacion Digital</li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-6 advantage-grid-info1">
-              <div class="advantage_left1 text-center">
+              <div class="comunicaciones text-center">
                 <img
                   src="https://lh3.googleusercontent.com/bcizaK7vtOs1sRTfSf4wd3Z3pks6f6CF8nc_t7IdWXSzsPeKNTv8gZ8W-OUprOTuHz4eEdrfUhC11vXCjgTAEfRVZZe9Gh1bjFTzgIyJGNeZRPKV6Sda5ZsPsW6hzmMcgb4flGW9tGY=w2400"
                   class="img-fluid"
@@ -217,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info1">
-              <div class="advantage_left1 text-center">
+              <div class="comunicaciones text-center">
                 <img
                   src="https://lh3.googleusercontent.com/sySzTBgKT3LBYNKriqYcArxHOo0w582n7qZFhOvMGlx6QyihI1d3UUIEP6S51Zn5-1vBtXzKFw6280GLuBv1E3x6W6IurS0_iSk4Ed7eh-ZjrMOp-ZkwqLmcNyLKw1YZdh_nS4YzpYs=w2400"
                   class="img-fluid"
@@ -251,12 +251,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -269,7 +270,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
@@ -279,7 +280,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
