--- a/instalaciones.html
+++ b/instalaciones.html
@@ -104,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         class="dropdown-item"
                         href="instalaciones.html"
                         title=""
-                        >Instalaciones Fisicas</a
+                        >Instalaciones Físicas</a
                       >
                       <a class="dropdown-item" href="vmware.html">VMware</a>
                       <a class="dropdown-item" href="aix.html">AIX / Linux</a>
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
       <div class="container">
         <div class="inner-sec py-lg-5 py-3">
-          <h3 class="tittle text-center mb-md-5 mb-4">Instalaciones Fisicas</h3>
+          <h3 class="tittle text-center mb-md-5 mb-4">Instalaciones Físicas</h3>
           <!-- 4 card section -->
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-4 about-in middle-grid-info text-center">
@@ -215,7 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
-                <div class="row">
+                <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>Construcci&oacute;n de Centros de C&oacute;mputo.</li>
@@ -267,7 +267,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
-                <div class="row">
+                <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>
@@ -295,7 +295,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
 
           <!-- Aire Acondicionado de Presicion -->
-          <div class="row middle-grids pt-lg-5">
+          <div class="row middle-grids pt-lg-5 ml-2">
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Data Centers</h4>
@@ -352,7 +352,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                           at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                           in, egestas vestibulum tellus.</p> -->
-                <div class="row">
+                <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>UPS.</li>
@@ -389,7 +389,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                   at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                   in, egestas vestibulum tellus.</p> -->
-                <div class="row">
+                <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>Sistemas de Control de Acceso.</li>
@@ -447,7 +447,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
-                <div class="row">
+                <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>
@@ -478,12 +478,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -496,7 +497,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
@@ -506,7 +507,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
