--- a/seguridad.html
+++ b/seguridad.html
@@ -292,12 +292,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -320,7 +321,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
