nabvar services ordenado y aix deshabilitado

--- a/servicios.html
+++ b/servicios.html
@@ -102,20 +102,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       Servicios <i class="fas fa-caret-down"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="impresion.html"
-                        >Impresion</a
-                      >
-                      <a class="dropdown-item" href="instalaciones.html"
-                        >Instalaciones Fisicas</a
-                      >
-                      <a class="dropdown-item" href="vmware.html">VMware</a>
-                      <a class="dropdown-item" href="aix.html">AIX / Linux</a>
                       <a class="dropdown-item" href="comunicaciones.html"
                         >Comunicaciones</a
                       >
+                      <a class="dropdown-item" href="impresion.html"
+                        >Impresión</a
+                      >
+                      <a class="dropdown-item" href="instalaciones.html"
+                        >Instalaciones Físicas</a
+                      >
+                      <!-- <a class="dropdown-item" href="aix.html">AIX / Linux</a> -->
+
                       <a class="dropdown-item" href="seguridad.html"
                         >Seguridad</a
                       >
+                      <a class="dropdown-item" href="vmware.html">VMware</a>
                     </div>
                   </li>
                   <li>
@@ -198,18 +199,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
 
-            <div class="col-lg-4 about-in mt-lg-4 text-center">
+            <!-- <div class="col-lg-4 about-in mt-lg-4 text-center">
               <div class="card">
                 <div class="card-body">
                   <i class="fas fa-database mb-4"></i>
                   <h5 class="card-title">AIX / Linux</h5>
-                  <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
+                   <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
                   <a href="aix.html" class="btn btn-primary mt-3 details-button"
                     >Ir</a
                   >
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="col-lg-4 about-in mt-lg-4 text-center">
               <div class="card">
