--- a/instalaciones.html
+++ b/instalaciones.html
@@ -97,8 +97,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       Servicios <i class="fas fa-caret-down"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="comunicaciones.html"
+                        >Comunicaciones</a
+                      >
                       <a class="dropdown-item" href="impresion.html"
-                        >Impresion</a
+                        >Impresión</a
                       >
                       <a
                         class="dropdown-item"
@@ -106,14 +109,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         title=""
                         >Instalaciones Físicas</a
                       >
-                      <a class="dropdown-item" href="vmware.html">VMware</a>
-                      <a class="dropdown-item" href="aix.html">AIX / Linux</a>
-                      <a class="dropdown-item" href="comunicaciones.html"
-                        >Comunicaciones</a
-                      >
+                      <!-- <a class="dropdown-item" href="aix.html">AIX / Linux</a> -->
+
                       <a class="dropdown-item" href="seguridad.html"
                         >Seguridad</a
                       >
+                      <a class="dropdown-item" href="vmware.html">VMware</a>
                     </div>
                   </li>
                   <li>
