about grammatic errors

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Nosotros</title>
+    <title>Genesys Informática | Nosotros</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -189,14 +189,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 about-right">
               <h5 class="tittle text-uppercase">Misión</h5>
               <p class="my-4 about-paragraph indent-this-text">
-                Generar valor para las empresas mediante la integracion de
-                soluciones en tecnologias de información que cubran sus
+                Generar valor para las empresas mediante la integración de
+                soluciones en tecnologías de información que cubran sus
                 necesidades de negocio e incrementen sus ventajas competitivas.
               </p>
               <h5 class="tittle text-uppercase">Visión</h5>
               <p class="my-4 about-paragraph indent-this-text">
-                Somos una empresa Lider en ofrecer soliciones de tecnologia de
-                información basadas en la innovacion y la especializacion,
+                Somos una empresa Líder en ofrecer soluciones de tecnología de
+                información basadas en la innovación y la especialización,
                 fundamentada en valores, que genera beneficios para nuestros
                 clientes, socios, y colaboradores, logrando crecimiento
                 continuo.
@@ -334,13 +334,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </section> -->
     <!-- //team -->
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
               <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
-              <p>Dr Angel Martinez Villareal #433</p>
+              <p>Dr Angel Martinez Villarreal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
@@ -376,7 +376,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     class="form-control form-group-email"
                     type="text"
                     name="email"
-                    placeholder="Correo Electronico"
+                    placeholder="Correo Electrónico"
                   />
                   <input
                     class="form-control"
