--- a/seguridad.html
+++ b/seguridad.html
@@ -294,7 +294,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
               <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
-              <p>Dr Angel Martinez Villareal #433</p>
+              <p>Dr Angel Martinez Villarreal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
