--- a/vmware.html
+++ b/vmware.html
@@ -179,11 +179,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-7 w3layouts_choose_left_grid1">
             <div class="choose_top">
               <h3 class="w3l_header text-white mb-3 mt-3">
-                Virtualizacion de Servidores Intel
+                Virtualización de Servidores Intel
               </h3>
               <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
               <h4 class="mb-3 mt-3 text-white">
-                Ambientes Greenfield y Brownfiled
+                Ambientes Greenfield y Brownfield
               </h4>
               <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
               at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
@@ -194,7 +194,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 operaciones empresariales, gracias a la posibilidad de
                 consolidar 15 máquinas virtuales o más en un solo servidor
                 físico sin sacrificar el rendimiento ni la producción.
-                <br /><br />
+              </p>
+              <p class="text-white vmware-p">
                 Contamos con amplia experiencia en diseño e implementación de
                 ambientes virtuales nuevos, soluciones de diseño de arquitectura
                 para ambientes existentes físicos o virtuales.
@@ -326,7 +327,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
               <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
-              <p>Dr Angel Martinez Villareal #433</p>
+              <p>Dr Angel Martinez Villarreal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
